--- a/packages/tsx-editor/package.json
+++ b/packages/tsx-editor/package.json
@@ -46,7 +46,7 @@
   "dependencies": {
     "@microsoft/load-themed-styles": "^1.7.13",
     "@uifabric/fluent-theme": "^7.1.4",
-    "monaco-editor": "^0.17.0",
+    "@uifabric/monaco-editor": "^0.1.0",
     "office-ui-fabric-react": "^7.32.0",
     "react-syntax-highlighter": "^10.1.3",
     "tslib": "^1.7.1",
