--- a/packages/office-ui-fabric-react/package.json
+++ b/packages/office-ui-fabric-react/package.json
@@ -73,6 +73,7 @@
     "@uifabric/foundation": "^7.4.1",
     "@uifabric/icons": "^7.2.1",
     "@uifabric/merge-styles": "^7.5.2",
+    "@uifabric/react-hooks": "^7.0.0",
     "@uifabric/set-version": "^7.0.2",
     "@uifabric/styling": "^7.6.2",
     "@uifabric/utilities": "^7.0.9",
