--- a/scripts/package.json
+++ b/scripts/package.json
@@ -42,7 +42,7 @@
     "jju": "^1.4.0",
     "jscodeshift": "^0.5.0",
     "json-loader": "^0.5.7",
-    "just-scripts": "~0.28.2",
+    "just-scripts": "~0.29.0",
     "mustache": "^2.3.0",
     "ngrok": "^3.0.1",
     "node-sass": "^4.5.3",
@@ -55,6 +55,7 @@
     "raw-loader": "^0.5.1",
     "recast": "~0.15.0",
     "resolve": "^1.7.1",
+    "riceburn": "^1.3.1",
     "rxjs": "^6.3.3",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
