--- a/packages/foundation/package.json
+++ b/packages/foundation/package.json
@@ -45,6 +45,7 @@
     "@uifabric/build": "^7.0.0"
   },
   "dependencies": {
+    "@uifabric/merge-styles": "^7.7.0",
     "@uifabric/set-version": "^7.0.2",
     "@uifabric/styling": "^7.7.2",
     "@uifabric/utilities": "^7.3.0",
