--- a/packages/monaco-editor/package.json
+++ b/packages/monaco-editor/package.json
@@ -15,12 +15,11 @@
     "just": "just-scripts"
   },
   "devDependencies": {
-    "@uifabric/build": "^7.0.0",
-    "glob": "^7.1.2",
-    "monaco-editor": "0.17.1"
+    "@uifabric/build": "^7.0.0"
   },
   "dependencies": {
     "@microsoft/load-themed-styles": "^1.7.13",
+    "monaco-editor": "0.17.1",
     "tslib": "^1.7.1"
   },
   "optionalPeerDependencies": {
