--- a/packages/office-ui-fabric-react/package.json
+++ b/packages/office-ui-fabric-react/package.json
@@ -47,6 +47,7 @@
     "@uifabric/test-utilities": "^7.0.6",
     "@uifabric/tslint-rules": "^7.0.5",
     "@uifabric/webpack-utils": "^7.0.4",
+    "@uifabric/example-data": "7.0.1",
     "enzyme": "~3.9.0",
     "enzyme-adapter-react-16": "^1.2.0",
     "enzyme-to-json": "^3.3.4",
@@ -68,7 +69,6 @@
   },
   "dependencies": {
     "@microsoft/load-themed-styles": "^1.7.13",
-    "@uifabric/example-data": "^7.0.1",
     "@uifabric/foundation": "^7.4.4",
     "@uifabric/icons": "^7.3.0",
     "@uifabric/merge-styles": "^7.8.0",
