--- a/packages/example-app-base/package.json
+++ b/packages/example-app-base/package.json
@@ -46,6 +46,7 @@
     "@microsoft/load-themed-styles": "^1.7.13",
     "@uifabric/example-data": "^7.0.1",
     "@uifabric/fluent-theme": "^7.1.4",
+    "@uifabric/react-hooks": "^7.0.1",
     "@uifabric/set-version": "^7.0.2",
     "@uifabric/tsx-editor": "^0.10.3",
     "color-check": "0.0.2",
