Folder And Filetype Updates (brought to Fabric7) (#11434)
* Folding https://github.com/OfficeDev/office-ui-fabric-react/pull/11125 into Fabric 7

* Change files

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -100,7 +100,7 @@ DocumentCard/ @yiminwu
 Dropdown/ @joschect
 Fabric/ @dzearing
 Facepile/ @markionium @mtennoe
-FolderCover/ @ThomasMichon
+FolderCover/ @ThomasMichon @bigbadcapers
 FocusTrapZone/ @JasonGore
 FocusZone/ @JasonGore
 GroupedList/  @aditima @KevinTCoughlin
