--- a/packages/monaco-editor/package.json
+++ b/packages/monaco-editor/package.json
@@ -15,7 +15,8 @@
     "just": "just-scripts"
   },
   "devDependencies": {
-    "monaco-editor": "0.18.1",
+    "monaco-editor": "0.19.0",
+    "monaco-typescript": "3.6.1",
     "@uifabric/build": "^7.0.0"
   },
   "dependencies": {
