--- a/packages/tsx-editor/tsconfig.json
+++ b/packages/tsx-editor/tsconfig.json
@@ -3,11 +3,7 @@
     "baseUrl": ".",
     "outDir": "dist",
     "target": "es5",
-    // Setting this to esnext is required to make webpack code splitting work with import() and React.lazy
-    // https://github.com/webpack/webpack/issues/5703#issuecomment-357512412
-    // (the setting in tsconfig.json only affects serve mode; in non-serve mode webpack runs against
-    // <package>/lib which is also in esnext format)
-    "module": "esnext",
+    "module": "commonjs",
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
