--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -24,7 +24,8 @@ jest.config.js @kenotron @ecraig12345
 tsconfig.json @kenotron @ecraig12345
 lerna.json @kenotron @ecraig12345
 LICENSE @kenotron @ecraig12345
-azure-pipelines.yml @ecraig12345 @kenotron
+azure-pipelines.yml @ecraig12345 @kenotron @JasonGore
+azure-pipelines.*.yml @ecraig12345 @kenotron @JasonGore
 .appveyor.yml @kenotron @ecraig12345
 .npmrc @kenotron @ecraig12345
 .npmignore @kenotron @ecraig12345
