remove test-bundle from PR gate; move it to only be done inside the bundle job (#11673)
* remove test-bundle from PR gate; move it to only be done inside the bundlesize yaml

* getting rid of test-bundles dep from pr-deploy-site

* Change files

--- a/azure-pipelines.bundlesize.yml
+++ b/azure-pipelines.bundlesize.yml
@@ -15,7 +15,7 @@ jobs:
       - script: yarn buildto test-bundles
         displayName: yarn build to test-bundles
 
-      - script: yarn workspace test-bundles bundle
+      - script: yarn workspace test-bundles bundle:size
         displayName: yarn bundle test-bundles
 
       - script: yarn workspace office-ui-fabric-react just webpack
