--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,12 +7,10 @@ trigger:
 variables:
   - group: fabric-variables
 
-pool:
-  vmImage: 'Ubuntu 16.04'
+pool: 'Self Host Ubuntu'
 
 jobs:
   - job: Build
-    pool: 'Self Host Ubuntu'
     steps:
       - template: azure-pipelines.tools.yml
 
@@ -39,20 +37,39 @@ jobs:
           replaceExistingArchive: true
 
       - publish: $(Build.ArtifactStagingDirectory)
-        artifact: Build
+        artifact: Build-PR-$(Build.BuildNumber)
+
+      - script: |
+          az --version
+          az extension add -n azure-devops
+          echo $(buildQueuePat) | az devops login --organization https://uifabric.visualstudio.com
+          az devops configure --defaults organization=https://uifabric.visualstudio.com project="fabricpublic" --use-git-aliases true
+        env:
+          AZURE_DEVOPS_EXT_PAT: $(buildQueuePat)
+        displayName: Set up Azure CLI with DevOps
+
+      - script: |
+          az pipelines build queue --verbose --org https://uifabric.visualstudio.com -p fabricpublic --definition-name "office-ui-fabric-react - Perf-Test" --branch $(Build.SourceBranch) --variables artifact=Build-PR-$(Build.BuildNumber) buildId=$(Build.BuildId)
+        env:
+          AZURE_DEVOPS_EXT_PAT: $(buildQueuePat)
+        displayName: Trigger Perf-Test and Screener jobs
 
       - task: DeleteFiles@1
         inputs:
           SourceFolder: $(Build.SourcesDirectory)
           Contents: '**/*'
+        condition: always()
 
   - job: Validate
     dependsOn: Build
-    pool: 'Self Host Ubuntu'
     steps:
       # No need for checkout since we're using build artifacts.
       - checkout: none
+
       - template: azure-pipelines.artifacts.yml
+        parameters:
+          artifact: Build-PR-$(Build.BuildNumber)
+          buildId: $(Build.BuildId)
 
       - script: |
           yarn test
@@ -70,14 +87,18 @@ jobs:
         inputs:
           SourceFolder: $(Build.SourcesDirectory)
           Contents: '**/*'
+        condition: always()
 
   - job: Deploy
     dependsOn: Build
-    pool: 'Self Host Ubuntu'
     steps:
       # No need for checkout since we're using build artifacts.
       - checkout: none
+
       - template: azure-pipelines.artifacts.yml
+        parameters:
+          artifact: Build-PR-$(Build.BuildNumber)
+          buildId: $(Build.BuildId)
 
       - template: azure-pipelines.tools.yml
 
@@ -98,63 +119,20 @@ jobs:
         inputs:
           SourceFolder: $(Build.SourcesDirectory)
           Contents: '**/*'
+        condition: always()
 
-  - job: PerfTest
+  - job: Screener
     dependsOn: Build
+    pool:
+      vmImage: 'Ubuntu 16.04'
     steps:
       # No need for checkout since we're using build artifacts.
       - checkout: none
+
       - template: azure-pipelines.artifacts.yml
-
-      - template: azure-pipelines.tools.yml
-
-      - script: |
-          yarn
-        displayName: yarn
-
-      - script: |
-          yarn just perf-test
-        workingDirectory: apps/perf-test
-        displayName: Perf Test
-
-      - task: AzureUpload@1
-        displayName: Upload Perf Test Result to PR deploy site
-        inputs:
-          SourcePath: 'apps/perf-test/dist'
-          azureSubscription: 'UI Fabric (bac044cf-49e1-4843-8dda-1ce9662606c8)'
-          storage: fabricweb
-          ContainerName: '$web'
-          BlobPrefix: 'pr-deploy-site/$(Build.SourceBranch)/perf-test'
-
-      - task: GithubPRComment@0
-        displayName: 'Post Perf Results to Github Pull Request'
-        inputs:
-          githubOwner: OfficeDev
-          githubRepo: 'office-ui-fabric-react'
-          blobFilePath: '$(Build.SourcesDirectory)/$(PerfCommentFilePath)'
-          status: '$(PerfCommentStatus)'
-          uniqueId: 'perfComment9423'
-
-      - task: GithubPRStatus@0
-        displayName: 'Update Github Pull Request Status'
-        inputs:
-          githubOwner: OfficeDev
-          githubRepo: 'office-ui-fabric-react'
-          githubContext: 'Pull Request Deployed Site'
-          githubDescription: 'Click "Details" to go to the Deployed Site'
-          githubTargetLink: 'http://fabricweb.z5.web.core.windows.net/pr-deploy-site/$(Build.SourceBranch)/'
-
-      - task: DeleteFiles@1
-        inputs:
-          SourceFolder: $(Build.SourcesDirectory)
-          Contents: '**/*'
-
-  - job: VRTest
-    dependsOn: Build
-    steps:
-      # No need for checkout since we're using build artifacts.
-      - checkout: none
-      - template: azure-pipelines.artifacts.yml
+        parameters:
+          artifact: Build-PR-$(Build.BuildNumber)
+          buildId: $(Build.BuildId)
 
       - script: |
           git config --global user.email "fabrictactical@microsoft.com"
@@ -168,10 +146,4 @@ jobs:
         inputs:
           SourceFolder: $(Build.SourcesDirectory)
           Contents: '**/*'
-    # a11y-tests disabled until occasional local and CI timeout issue can be resolved.
-    # If/when re-enabled, analyze job strategy to optimize build time. Make standalone job or append to another test job?
-    #- task: PublishBuildArtifacts@1
-    #  inputs:
-    #    pathtoPublish: './apps/a11y-tests/dist/reports'
-    #    artifactName: 'CodeAnalysisLogs'
-    #  displayName: publish sarif a11y reports
+        condition: always()
