--- a/packages/file-type-icons/package.json
+++ b/packages/file-type-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/file-type-icons",
-  "version": "7.2.8",
+  "version": "7.2.9",
   "description": "Office UI Fabric file type icon set.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -26,15 +26,15 @@
     "@types/react": "16.8.11",
     "@types/react-dom": "16.8.4",
     "@types/webpack-env": "1.13.9",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/tslint-rules": "^7.0.6",
     "react": "16.8.6",
     "react-app-polyfill": "~1.0.1",
-    "react-dom": "16.8.6",
-    "@uifabric/build": "^7.0.0"
+    "react-dom": "16.8.6"
   },
   "dependencies": {
-    "@uifabric/styling": "^7.10.5",
     "@uifabric/set-version": "^7.0.5",
+    "@uifabric/styling": "^7.10.5",
     "tslib": "^1.10.0"
   },
   "peerDependencies": {
