--- a/packages/foundation/package.json
+++ b/packages/foundation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/foundation",
-  "version": "7.5.6",
+  "version": "7.5.7",
   "description": "Foundation library for building Fabric components.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -34,6 +34,7 @@
     "@types/react-dom": "16.8.4",
     "@types/react-test-renderer": "^16.0.0",
     "@types/sinon": "2.2.2",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/jest-serializer-merge-styles": "^7.0.10",
     "@uifabric/tslint-rules": "^7.0.6",
     "enzyme": "~3.10.0",
@@ -43,8 +44,7 @@
     "react-dom": "16.8.6",
     "react-hooks-testing-library": "^0.5.0",
     "react-test-renderer": "^16.3.0",
-    "sinon": "^4.1.3",
-    "@uifabric/build": "^7.0.0"
+    "sinon": "^4.1.3"
   },
   "dependencies": {
     "@uifabric/merge-styles": "^7.8.6",
