--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/icons",
-  "version": "7.3.5",
+  "version": "7.3.6",
   "description": "Office UI Fabric icon set.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -24,8 +24,8 @@
     "update-api": "just-scripts update-api"
   },
   "devDependencies": {
-    "@uifabric/tslint-rules": "^7.0.6",
-    "@uifabric/build": "^7.0.0"
+    "@uifabric/build": "^7.0.0",
+    "@uifabric/tslint-rules": "^7.0.6"
   },
   "dependencies": {
     "@uifabric/set-version": "^7.0.5",
