--- a/packages/styling/package.json
+++ b/packages/styling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/styling",
-  "version": "7.10.5",
+  "version": "7.10.6",
   "description": "Styling helpers for Office UI Fabric.",
   "repository": {
     "type": "git",
@@ -26,10 +26,10 @@
   "devDependencies": {
     "@types/jest": "~24.9.0",
     "@types/webpack-env": "1.13.9",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/tslint-rules": "^7.0.6",
     "es6-map": "^0.1.5",
-    "es6-weak-map": "^2.0.2",
-    "@uifabric/build": "^7.0.0"
+    "es6-weak-map": "^2.0.2"
   },
   "dependencies": {
     "@microsoft/load-themed-styles": "^1.10.26",
