--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -151,3 +151,35 @@ jobs:
           SourceFolder: $(Build.SourcesDirectory)
           Contents: '**/*'
         condition: always()
+
+  # - job: Danger
+  #   dependsOn: Build
+  #   steps:
+  #     # No need for checkout since we're using build artifacts.
+  #     - checkout: none
+
+  #     - template: azure-pipelines.artifacts.yml
+  #       parameters:
+  #         artifact: Build-PR-$(Build.BuildNumber)
+  #         buildId: $(Build.BuildId)
+
+  #     - template: azure-pipelines.tools.yml
+
+  #     - script: |
+  #         yarn perf:test
+  #       workingDirectory: packages/fluentui/perf-test
+  #       displayName: Perf Test
+
+  #     - script: |
+  #         if [ $BUILD_REASON == "PullRequest" ] && [ ! -z $DANGER_GITHUB_API_TOKEN ]; then
+  #           yarn danger ci
+  #         elif [ $BUILD_REASON != "PullRequest" ]; then
+  #           echo "Skipping Danger JS because BUILD_REASON ${BUILD_REASON} != PullRequest"
+  #         else
+  #           echo "Skipping Danger JS because API token wasn't found"
+  #         fi
+
+  #     - script: |
+  #         yarn danger ci
+  #       env:
+  #         DANGER_GITHUB_API_TOKEN: $(DANGER_GITHUB_API_TOKEN)
