--- a/package.json
+++ b/package.json
@@ -8,45 +8,43 @@
     "url": "https://github.com/OfficeDev/office-ui-fabric-react"
   },
   "scripts": {
-    "preinstall": "node ./scripts/use-yarn-please.js",
-    "postinstall": "node ./scripts/postinstall.js",
-    "gulpbuild": "gulp build",
-    "buildto": "node ./scripts/monorepo/buildTo.js",
-    "builddemo": "node ./scripts/monorepo/buildTo.js fabric-website-resources",
-    "bundle": "lerna run bundle --stream",
-    "bundle:prod": "lerna run bundle --stream -- --production",
-    "scrub": "node ./scripts/scrub.js",
-    "vrtest": "cd apps && cd vr-tests && npm run screener",
     "a11ytest": "cd apps && cd a11y-tests && npm run test",
-    "start:legacy": "yarn workspace @uifabric/fabric-website-resources start",
-    "start": "node scripts/start.js",
-    "start-exp": "yarn workspace @uifabric/experiments start",
     "build": "lerna run build --stream",
-    "build:fluent": "gulp build",
     "build:prod": "lerna run build --stream -- --production",
     "buildci": "yarn build && yarn test && yarn lint && yarn bundle",
     "buildci:prod": "yarn build:prod && yarn test && yarn lint && yarn bundle:prod",
-    "clean": "lerna run clean --parallel",
-    "rebuild": "node ./scripts/invalidate-just-cache.js && npx lerna build --stream",
-    "code-style": "lerna run code-style --stream",
-    "change": "beachball change",
+    "builddemo": "node ./scripts/monorepo/buildTo.js fabric-website-resources",
+    "buildto": "node ./scripts/monorepo/buildTo.js",
+    "bundle": "lerna run bundle --stream",
+    "bundle:prod": "lerna run bundle --stream -- --production",
     "bundlesize": "cd scripts && npm run bundlesize",
     "bundlesizecollect": "cd scripts && just-scripts bundle-size-collect",
+    "checkchange": "beachball check --changehint \"Run 'yarn change' to generate a change file\"",
+    "clean": "lerna run clean --parallel",
+    "codepen": "cd packages/office-ui-fabric-react && node ../../scripts/local-codepen.js",
+    "code-style": "lerna run code-style --stream",
     "create-component": "node scripts/create-component.js",
     "create-package": "node scripts/create-package.js",
     "create-page": "node scripts/create-page.js",
-    "checkchange": "beachball check --changehint \"Run 'yarn change' to generate a change file\"",
+    "change": "beachball change",
+    "dom-test": "cd apps/dom-tests && just-scripts jest-dom-with-webpack",
+    "generate-version-files": "yarn workspace @uifabric/build just generate-version-files",
+    "lint": "lerna run lint --parallel",
     "publish:beachball": "beachball publish",
+    "check-for-changed-files": "cd scripts && just-scripts check-for-modified-files",
+    "preinstall": "node ./scripts/use-yarn-please.js",
+    "postinstall": "node ./scripts/postinstall.js",
+    "prettier": "node scripts/prettier.js",
+    "rebuild": "node ./scripts/invalidate-just-cache.js && npx lerna build --stream",
+    "scrub": "node ./scripts/scrub.js",
+    "start:legacy": "yarn workspace @uifabric/fabric-website-resources start",
+    "start": "node scripts/start.js",
+    "start-exp": "yarn workspace @uifabric/experiments start",
+    "test": "lerna run test --stream",
     "update-api": "cd packages/office-ui-fabric-react && npm run update-api",
     "update-snapshots": "lerna run update-snapshots --stream",
     "update-a11y": "cd apps/a11y-tests && npm run update-snapshots",
-    "check-for-changed-files": "cd scripts && just-scripts check-for-modified-files",
-    "prettier": "node scripts/prettier.js",
-    "generate-version-files": "yarn workspace @uifabric/build just generate-version-files",
-    "codepen": "cd packages/office-ui-fabric-react && node ../../scripts/local-codepen.js",
-    "dom-test": "cd apps/dom-tests && just-scripts jest-dom-with-webpack",
-    "lint": "lerna run lint --parallel",
-    "test": "lerna run test --stream"
+    "vrtest": "cd apps && cd vr-tests && npm run screener"
   },
   "devDependencies": {
     "beachball": "^1.18.4",
