fixes the docgen plugin to inject base and cwd for caching purposes (#12170)
* fixes the docgen plugin to inject base and cwd for caching purposes

* updating cached key

--- a/azure-pipelines.cache.yml
+++ b/azure-pipelines.cache.yml
@@ -2,9 +2,9 @@
 steps:
   - task: Cache@2
     inputs:
-      key: 'gulp-cache | "$(Agent.OS)"'
+      key: 'gulp-cache-v001 | "$(Agent.OS)"'
       restoreKeys: |
-        gulp-cache | "$(Agent.OS)"
-        gulp-cache
+        gulp-cache-v001 | "$(Agent.OS)"
+        gulp-cache-v001
       path: /tmp/gulp-cache
     displayName: Cache gulp-cache
