--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "bundle:prod": "lerna run bundle --stream -- --production",
     "bundlesize": "cd scripts && npm run bundlesize",
     "bundlesizecollect": "cd scripts && just-scripts bundle-size-collect",
-    "checkchange": "beachball check --changehint \"Run 'yarn change' to generate a change file\"",
+    "checkchange": "beachball check  --scope \"!packages/fluentui/*\" --changehint \"Run 'yarn change' to generate a change file\"",
     "clean": "lerna run clean --parallel",
     "codepen": "cd packages/office-ui-fabric-react && node ../../scripts/local-codepen.js",
     "code-style": "lerna run code-style --stream",
     "create-component": "node scripts/create-component.js",
     "create-package": "node scripts/create-package.js",
     "create-page": "node scripts/create-page.js",
-    "change": "beachball change",
+    "change": "beachball change --scope \"!packages/fluentui/*\"",
     "dom-test": "cd apps/dom-tests && just-scripts jest-dom-with-webpack",
     "generate-version-files": "yarn workspace @uifabric/build just generate-version-files",
     "lint": "lerna run lint --parallel",
-    "publish:beachball": "beachball publish",
+    "publish:beachball": "beachball publish --scope \"!packages/fluentui/*\"",
     "check-for-changed-files": "cd scripts && just-scripts check-for-modified-files",
     "perf": "cross-env PERF=true gulp perf --times=100",
     "perf:debug": "cross-env PERF=true gulp perf:debug --debug",
@@ -60,7 +60,7 @@
     "vrtest": "cd apps && cd vr-tests && npm run screener"
   },
   "devDependencies": {
-    "beachball": "^1.18.4",
+    "beachball": "^1.20.0",
     "lerna": "^3.15.0",
     "lint-staged": "^7.0.5",
     "cross-env": "^5.1.4",
