--- a/azure-pipelines.perf-test.yml
+++ b/azure-pipelines.perf-test.yml
@@ -86,8 +86,11 @@ steps:
     condition: ne(variables.buildReason, 'PullRequest')
     displayName: Performance Tests (master only)
 
+  # TODO: re-enable with proper tag filtering as needed
+  # - script: |
+  #     yarn stats:save --tag=`git tag --points-at HEAD`
   - script: |
-      yarn stats:save --tag=`git tag --points-at HEAD`
+      yarn stats:save
     condition: ne(variables.buildReason, 'PullRequest')
     displayName: Save Statistics to DB (master only)
     env:
