Lint and prettier updates (#12214)
* Lint and prettier config updates

* Change files

* Remove typedef and no-inferrable-types overrides

* Change files

* Update prettier.config.js

--- a/packages/tslint-rules/package.json
+++ b/packages/tslint-rules/package.json
@@ -9,7 +9,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "tslint-react": "^3.2.0"
+    "tslint-react": "^3.2.0",
+    "tslint-config-prettier": "^1.18.0"
   },
   "peerDependencies": {
     "tslint": "*"
